<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.BookmarkActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.TheMovieDatabase.NoActionBar.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentScrim="@color/red_200"
            app:layout_scrollFlags="scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:alpha="0.2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/backdrop_app"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_welcome_fav"
                    style="@style/Headline2"
                    android:textColor="@android:color/white"
                    android:text="@string/welcome"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

                <TextView
                    style="@style/Headline2"
                    android:text="@string/bookmark_tagline"
                    android:layout_marginTop="@dimen/small"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome_fav"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageButton
                    android:id="@+id/btn_back_bookmark"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_icon"
                    android:clickable="true"
                    android:paddingStart="5dp"
                    app:tint="@android:color/white"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    android:focusable="true"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    style="@style/Headline1"
                    android:layout_marginStart="@dimen/large"
                    android:text="@string/bookmark"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_layout_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textOnWhite"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/textOnBlack" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_bookmark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>